force-app/main/default/objects/msf_IntegrationsControl__c/msf_IntegrationsControl__c.object-meta.xml
<CustomObject>
    <label>Importaciones e integraciones</label>
    <nameField>
        <displayFormat>CI-{0}</displayFormat>
        <label>Control Integraciones Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Importaciones e integraciones</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>