force-app/main/default/objects/msf_IntegrationsControl__c/fields/msf_EndDatePeriod__c.field-meta.xml
<CustomField>
    <fullName>msf_EndDatePeriod__c</fullName>
    <label>Fecha fin periodo</label>
    <type>Date</type>
</CustomField>