force-app/main/default/objects/msf_IntegrationsControl__c/fields/msf_EndDateProcess__c.field-meta.xml
<CustomField>
    <fullName>msf_EndDateProcess__c</fullName>
    <label>Fecha fin proceso</label>
    <type>DateTime</type>
</CustomField>