force-app/main/default/objects/msf_IntegrationsControl__c/fields/msf_ExecutionName__c.field-meta.xml
<CustomField>
    <fullName>msf_ExecutionName__c</fullName>
    <formula>TEXT(msf_ProcessType__c)&amp;&quot; &quot;&amp; TEXT(msf_TypologyPaymentMethod__c) +&quot; &quot;+TEXT(msf_StartDatePeriod__c) +&quot; &quot;+ TEXT(msf_EndDatePeriod__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre ejecución</label>
    <type>Text</type>
</CustomField>