force-app/main/default/objects/msf_IntegrationsControl__c/fields/msf_Message__c.field-meta.xml
<CustomField>
    <fullName>msf_Message__c</fullName>
    <label>Mensaje</label>
    <type>TextArea</type>
</CustomField>