force-app/main/default/objects/msf_IntegrationsControl__c/fields/msf_ProcessType__c.field-meta.xml
<CustomField>
    <fullName>msf_ProcessType__c</fullName>
    <label>Tipo de proceso</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SAP Finance</fullName>
            </value>
            <value>
                <fullName>SAP HR</fullName>
            </value>
            <value>
                <fullName>Altiria</fullName>
            </value>
            <value>
                <fullName>Talones</fullName>
            </value>
            <value>
                <fullName>Fichero entrada único</fullName>
            </value>
            <value>
                <fullName>SAP ITR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>