force-app/main/default/objects/msf_IntegrationsControl__c/fields/msf_StartDatePeriod__c.field-meta.xml
<CustomField>
    <fullName>msf_StartDatePeriod__c</fullName>
    <label>Fecha inicio periodo</label>
    <type>Date</type>
</CustomField>