force-app/main/default/objects/msf_IntegrationsControl__c/fields/msf_StartDateProcess__c.field-meta.xml
<CustomField>
    <fullName>msf_StartDateProcess__c</fullName>
    <label>Fecha inicio proceso</label>
    <type>DateTime</type>
</CustomField>