force-app/main/default/objects/msf_IntegrationsControl__c/fields/msf_Status__c.field-meta.xml
<CustomField>
    <fullName>msf_Status__c</fullName>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nuevo</fullName>
                <default>true</default>
                <label>Nuevo</label>
            </value>
            <value>
                <fullName>En progreso</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Finalización correcta</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>