force-app/main/default/objects/msf_IntegrationsControl__c/fields/msf_TypologyPaymentMethod__c.field-meta.xml
<CustomField>
    <fullName>msf_TypologyPaymentMethod__c</fullName>
    <label>Tipologia forma de pago</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>00</fullName>
                <label>Orden Bancaria</label>
            </value>
            <value>
                <fullName>01</fullName>
                <label>Tarjeta Crédito</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>Talones standard</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>Transferencias</label>
            </value>
            <value>
                <fullName>04</fullName>
                <label>Varios</label>
            </value>
            <value>
                <fullName>05</fullName>
                <label>TC On line</label>
            </value>
            <value>
                <fullName>06</fullName>
                <label>Cheques varios</label>
            </value>
            <value>
                <fullName>07</fullName>
                <label>Devolución OB</label>
            </value>
            <value>
                <fullName>09</fullName>
                <label>En especie - Servicio</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>En especie - inmovilizado</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>Sellos Correo</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>Trustly On line</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>PayPal</label>
            </value>
            <value>
                <fullName>16</fullName>
                <label>Iniciativa solidaria On line</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>Efectivo asociativo</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>ACMA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>