force-app/main/default/objects/msf_IntegrationsControl__c/recordTypes/AutomaticFiles.recordType-meta.xml
<RecordType>
    <fullName>AutomaticFiles</fullName>
    <active>true</active>
    <description>Altiria + SAP HR + SAP ITR</description>
    <label>Ficheros automáticos</label>
</RecordType>