force-app/main/default/objects/msf_IntegrationsControl__c/recordTypes/PayChecks.recordType-meta.xml
<RecordType>
    <fullName>PayChecks</fullName>
    <active>true</active>
    <label>Talones</label>
</RecordType>