force-app/main/default/objects/msf_IntegrationsControl__c/recordTypes/SAPFinance.recordType-meta.xml
<RecordType>
    <fullName>SAPFinance</fullName>
    <active>true</active>
    <label>SAP Finanzas</label>
</RecordType>