force-app/main/default/objects/msf_IntegrationsControl__c/recordTypes/SingleEntryFile.recordType-meta.xml
<RecordType>
    <fullName>SingleEntryFile</fullName>
    <active>true</active>
    <description>Económico + Cappta + Prospectos</description>
    <label>Fichero de entrada único</label>
</RecordType>