force-app/main/default/objects/msf_IntegrationsControl__c/validationRules/Fecha_InicioPeriodo_no_vacia.validationRule-meta.xml
<ValidationRule>
    <fullName>Fecha_InicioPeriodo_no_vacia</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(msf_StartDatePeriod__c) &amp;&amp; (  ISPICKVAL(msf_ProcessType__c, &apos;Talones&apos;)  ||  ISPICKVAL(msf_ProcessType__c, &apos;SAP Finance&apos;)  ) &amp;&amp; ISPICKVAL( msf_Status__c , &apos;Nuevo&apos;)</errorConditionFormula>
    <errorDisplayField>msf_StartDatePeriod__c</errorDisplayField>
    <errorMessage>No puede estar vacia la fecha de Inicio de periodo</errorMessage>
</ValidationRule>