force-app/main/default/objects/msf_IntegrationsControl__c/validationRules/FechaFinPeriodSuperiorInicio.validationRule-meta.xml
<ValidationRule>
    <fullName>FechaFinPeriodSuperiorInicio</fullName>
    <active>true</active>
    <errorConditionFormula>!ISBLANK( msf_EndDatePeriod__c ) &amp;&amp; !ISBLANK( msf_StartDatePeriod__c ) &amp;&amp; msf_EndDatePeriod__c &lt; msf_StartDatePeriod__c</errorConditionFormula>
    <errorMessage>La fecha de fin de periodo ha de ser mayor o igual a la fecha de inicio</errorMessage>
</ValidationRule>