force-app/main/default/objects/msf_IntegrationsControl__c/validationRules/Typologia_no_vacia.validationRule-meta.xml
<ValidationRule>
    <fullName>Typologia_no_vacia</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(TEXT(  msf_TypologyPaymentMethod__c )) &amp;&amp;   ISPICKVAL(msf_ProcessType__c, &apos;SAP Finance&apos;) &amp;&amp; ISPICKVAL( msf_Status__c , &apos;Nuevo&apos;)</errorConditionFormula>
    <errorDisplayField>msf_TypologyPaymentMethod__c</errorDisplayField>
    <errorMessage>No puede estar vacio el campo tipologia de forma de pago</errorMessage>
</ValidationRule>