force-app/main/default/objects/msf_IntegrationsControl__c/listViews/Fichero_Talones.listView-meta.xml
<ListView>
    <fullName>Fichero_Talones</fullName>
    <columns>NAME</columns>
    <columns>msf_ExecutionName__c</columns>
    <columns>msf_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>msf_StartDateProcess__c</columns>
    <columns>msf_EndDateProcess__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>msf_Message__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>msf_IntegrationsControl__c.PayChecks</value>
    </filters>
    <label>Generación Ficheros Talones</label>
    <sharedTo>
        <role>MSF</role>
    </sharedTo>
</ListView>