force-app/main/default/objects/msf_IntegrationsControl__c/listViews/Importaci_n_Socios_Colaboradores.listView-meta.xml
<ListView>
    <fullName>Importaci_n_Socios_Colaboradores</fullName>
    <columns>NAME</columns>
    <columns>msf_ExecutionName__c</columns>
    <columns>msf_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>msf_StartDateProcess__c</columns>
    <columns>msf_EndDateProcess__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>msf_Message__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>msf_IntegrationsControl__c.SingleEntryFile</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>6/10/2021 12:00 AM</value>
    </filters>
    <label>Importación Socios-Colaboradores</label>
    <sharedTo>
        <role>MSF</role>
        <role>Service_Center</role>
    </sharedTo>
</ListView>