force-app/main/default/objects/msf_IntegrationsControl__c/listViews/MSF_All.listView-meta.xml
<ListView>
    <fullName>MSF_All</fullName>
    <columns>NAME</columns>
    <columns>msf_ProcessType__c</columns>
    <columns>msf_ExecutionName__c</columns>
    <columns>msf_Status__c</columns>
    <columns>msf_TypologyPaymentMethod__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>